# CanadianExperience

./: film.anim  main.cpp
CanadianExperienceLib/: AnimChannel.cpp  Drawable.cpp  MachineDrawable.cpp  MachineDrawable.h  Picture.cpp  Picture.h  PictureFactory.cpp  SpartyFactory.cpp  Timeline.cpp  Timeline.h  ViewEdit.cpp  ViewEdit.h  ViewTimeline.cpp  ViewTimeline.h
MachineLib/: Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  Gear.cpp  Gear.h  INegotiator.cpp  INegotiator.h  Lever.cpp  Lever.h  MachineActual.cpp  MachineActual.h  MachineFactory.cpp  MachinesFactory.cpp  MachinesFactory.h  Motor.cpp  Motor.h  MovementSink.cpp  MovementSink.h  MovementSource.cpp  MovementSource.h  Piston.cpp  Piston.h  Polygon.h  Rod.cpp  Rod.h  RodSink.cpp  RodSink.h  RodSource.cpp  RodSource.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  Shape.cpp  Shape.h  Sink.cpp  Sink.h  Source.cpp  (+3 more)
MachineTests/: MachineTest.cpp
Tests/: CMakeLists.txt
resources/xrc/: main.fbp  main.xrc
